Feat(#58): 선호 만남 설정(요일, 장소), 장소 검색 2 장소 검색 API와 연계하여 선호 만남 설정(요일, 장소) 설정 API 엔드포인트 추가, 기획대로 멘토의 선호 만남 설정과 멘티의 선호 만남 설정이 개별적임. ErrorStatus 추가